Completed: TPV-407 - All - Change tittle of My Watchlist to My Favorite

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -289,7 +289,7 @@
     <string name="profile">My Profile</string>
     <string name="setting_title">Settings</string>
     <string name="term_condition">Terms and Conditions</string>
-    <string name="my_watchlist">My Watchlist</string>
+    <string name="my_watchlist">My Favorite</string>
     <string name="my_history">My Watch History</string>
     <string name="my_download">My Downloads</string>
     <string name="membership_plan">Membership and Plans</string>
