WIP: TPBS 100 - Notification Center - ability to keep notification log inside mobile app itself
displaying notifications in the list

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -423,6 +423,7 @@
     <string name="date_time">Date/Time : %s</string>
     <string name="internet">Internet : https://thaip.bs/helping</string>
     <string name="trailer">Trailer</string>
-
+    <string name="today">Today</string>
+    <string name="no_notification">No new notifications</string>
 
 </resources>
