--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -440,5 +440,7 @@
     <string name="device_platform">Platform : %s</string>
     <string name="date_time">Date/Time : %s</string>
     <string name="internet">Internet : https://thaip.bs/helping</string>
+    <string name="today">Today</string>
+    <string name="no_notification">No new notifications</string>
 
 </resources>
