--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -442,5 +442,7 @@
     <string name="internet">Internet : https://thaip.bs/helping</string>
     <string name="today">Today</string>
     <string name="no_notification">No new notifications</string>
+    <string name="delete_notification_all">Are you sure you want to delete all notifications?</string>
+    <string name="delete_notification_single">Are you sure you want to delete this notification?</string>
 
 </resources>
