--- a/app/src/dev/res/values/strings.xml
+++ b/app/src/dev/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <!--QA ID-->
     <string name="facebook_app_id">3991362660937190</string>
+    <string name="facebook_client_token" translatable="false">ed0d96f57393fdd742f6a3b02e60806c</string>
     <string name="fb_login_protocol_scheme">fb3991362660937190</string>
    <!-- <string name="branch_key">key_live_pmLNi9QcTFaYi53K9btkLjnhAuf22I9h</string>-->
     <string name="branch_key">key_live_cdJ7zkyRJg31rm79E5t5QkleDAmzOaM7</string>
