fixed notification ui related bugs

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -466,8 +466,8 @@
     <string name="trailer">วิดีโอตัวอย่าง</string>
     <string name="today">วันนี้</string>
     <string name="no_notification">ไม่มีการแจ้งเตือนใหม่</string>
-    <string name="delete_notification_all">ลบการแจ้งเตือนทั้งหมด</string>
-    <string name="delete_notification_single">ลบการแจ้งเตือนนี้</string>
+    <string name="delete_notification_all">ลบการแจ้งเตือนทั้งหมด?</string>
+    <string name="delete_notification_single">ลบการแจ้งเตือนนี้?</string>
 
 
 </resources>
